--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,9 @@ permissions:
   contents: write
 on: 
   push:
+    branches:
+      - main
+      - dev
   pull_request:
   # schedule:
   #   - cron:  '0 0 * * *'
