--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "description": "Typescript example",
     "main": "build/index.js",
     "scripts": {
+        "prepublish": "npm run build",
         "build": "tsc -b tsconfig.json",
         "lint": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' eslint . --quiet --ext .ts",
         "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha --colors --exlude tests/linter/linter.spec.ts --reporter mocha-multi-reporters --reporter-options configFile=config.json -r ts-node/register 'tests/**/*.ts'"
@@ -18,6 +19,7 @@
     "dependencies": {
         "@types/node": "^17.0.31",
         "@types/nunjucks": "^3.1.4",
+        "bit-field": "1.3.6",
         "clone": "^2.1.2",
         "json5": "2.1.3",
         "nunjucks": "^3.2.0",
@@ -29,8 +31,7 @@
         "svgdom": "^0.0.21",
         "temp": "0.9.4",
         "wavedrom": "2.6.8",
-        "web-tree-sitter": "^0.16.2",
-        "bit-field": "1.3.6"
+        "web-tree-sitter": "^0.16.2"
     },
     "devDependencies": {
         "@types/assert": "^1.5.6",
