--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
         "mochawesome": "^7.1.3",
         "ts-mocha": "^9.0.2",
         "ts-node": "^9.1.1",
+        "typedoc": "^0.23.9",
+        "typedoc-theme-hierarchy": "^3.0.0",
         "typescript": "^4.5.4"
     },
     "engines": {
